@@ -1,5 +1,7 @@
 package seedu.address.logic.commands;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.model.Model;
@@ -8,9 +10,9 @@ import seedu.address.model.Model;
  * Terminates the program.
  */
 public class ExitCommand extends Command {
-
-    public static final List<String> COMMAND_WORDS = List.of(new String[]{"exit", "ex"});
-
+    //CHECKSTYLE.OFF: VisibilityModifier
+    public static List<String> commandWords = new ArrayList<String>(Arrays.asList("exit", "ex"));
+    //CHECKSTYLE.ON: VisibilityModifier
     public static final String MESSAGE_EXIT_ACKNOWLEDGEMENT = "Exiting Address Book as requested ...";
 
     @Override
