@@ -3,21 +3,21 @@ package seedu.address.logic.commands;
 import static java.util.Objects.requireNonNull;
 import static seedu.address.model.Model.PREDICATE_SHOW_ALL_PERSONS;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.model.Model;
-
-
 
 /**
  * Lists all persons in the address book to the user.
  */
 public class ListCommand extends Command {
-
-    public static final List<String> COMMAND_WORDS = List.of(new String[]{"list", "l"});
+    //CHECKSTYLE.OFF: VisibilityModifier
+    public static List<String> commandWords = new ArrayList<String>(Arrays.asList("list", "l"));
+    //CHECKSTYLE.ON: VisibilityModifier
 
     public static final String MESSAGE_SUCCESS = "Listed all persons";
-
 
     @Override
     public CommandResult execute(Model model) {
